Feature:back: 역할 정보 전체 조회 API 추가
